lan2015/static/lan2015/main/index.css
.comment{
  background-color: rgba(250,250,250,0.5);
  border-radius: 5px;
  padding: 3px;
  opacity: 1;
  position: relative;
  margin-bottom: 10px;
}

.comment:nth-child(odd){
  margin-right: 20px;
  background-color: rgba(100,250,75,0.8);
}

.comment:nth-child(even){
  margin-left:20px;
  background-color: rgba(120,80,250,0.8);
}

.comment h5{
  margin: 5px;
  margin-left: 0;
}

body{
  overflow: hidden;
  background: url("background2.jpg");
  background-repeat: no-repeat;
  height: 100vh;
}

.startPage{
  height: 100vh;
  width: 100vw;
  left: 0;
  margin: auto;
  text-align: center;
  transition: bottom 4s, top 4s, left 5s;
  position:relative;
  top:0;
}

.flatButton{
  background-color: lightblue;
  box-shadow: none;
  border: 1px blue solid;
  border-radius: 32px;
  cursor: pointer;
}

.flatInput{
    box-shadow:none;
    border: 1px solid grey;
}

.flatInput:select{
    box-shadow: 2px lightblue inset;
}

#enterButton{
  position: relative;
  top:49vh;
  width:300px;
  font-size: 32px;
}

.mainPage{
  position:absolute;
  top: 100vh;
  left:0;
  transition: left 5s, top 5s, bottom 5s;
  height: 100vh;
}

#muteButton, .playButton{
  position: fixed;
  top:0;
  right:0;
  z-index: 100;
}

.playButton{
    font-size: 12px;
}

#announcementBox{
  position: absolute;
  left: 27vw;
  background-color: rgba(100,100,100,0.5);
  padding: 1vh 1vw 1vh 1vw;
  width: 41vw;
  height: 54vh;
  text-align: center;
  transition: top 5.5s;
}

.announcement{
  background-color: rgba(200,200,200,0.7);
  position: relative;
  padding-left: 5px;
  text-align: left;
}

@media (max-width: 400px) {
    h1#neon{
        font-size:24px;
    }
}
@media (max-width: 740px) {
  div.mainPage{
      height: 100vh;
      overflow: auto;
  }

  div#commentBox{
    position: initial;
    left: auto;
    margin: 10px;
    width: 90vw;
  }

  #announcementBox{
    position: initial;
    left: auto;
    margin: 10px;
    width: 90vw;
  }

  div#faqBox{
      position: initial;
      left:auto;
      margin:10px;
      width:90vw;
      padding: 1vh 1vw;
  }
}

#commentBox{
  font-family: myFont;
  width: 23vw;
  height: 54vh;
  padding: 1vh 1vw 1vh 1vw;
  position: absolute;
  left:0;
  background-color: rgba(0,0,0,0.5);
  transition: top 5s;
}
/*
#commentBox:before{
  content: "";
  width: 23vw;
  height: 55vh;
  position: absolute;
  left: 0;
  top:0;
  background: #000;
  opacity: 0.5;
  padding: 1vw;
  z-index: -1;
}*/


.commentShow{
  height:70%;
  overflow: auto;
}

.inputBox{
  height: 30%;
}

#colorInput{
    margin: 1px 0 2px 0;
    box-shadow: none;
    border: none;
    height:20px;
    padding-top:6px;
    background-color: rgba(0,0,0,0);
    width:40px;
}

#nameInput{
  box-shadow: none;
  border: 1px blue solid;
  margin-bottom: 2px;
  height: 21px;
}

#commentInput{
  width:90%;
  box-shadow: none;
  border: 1px blue solid;
}

.commentDate{
  position: absolute;
  right: 3px;
  top:0;
  font-size:11px;
}

#registerButton{
    width:100vw;
    background-color: #22FF22;
    position:fixed;
    bottom:1px;
    border: 1px solid green;
    height: 4vh;
    z-index: 10;
}

#audioElement{
  width:100vw;
}

#faqBox{
  font-family: myFont;
  position: absolute;
  right:0;
  width: 27vw;
  background-color: rgba(0,0,0,0.5);
  height: 54vh;
  padding: 1vh 0.5vw 1vh 0.5vw;
  transition: top 6s;
  overflow-y: auto;
}

#faqBox h3{
    padding-bottom: 2px;
    margin-bottom: 3px;
}

.faq{
  padding-left: 1vw;
}

.boxlet{
  top: 200vh;
}

#visCanvas{
    background-color: rgba(250, 250, 250, 0.3);
}

.mediaPage{
    position:absolute;
    top: 0;
    left: -100vw;
    transition: left 2s,top 5s, bottom 5s;
    height: 100vh;
    width: 100%;
    background-color: rgba(200,200,200,0.8);
    z-index:20;
    overflow:auto;
}

#headlineSpacer{
    height: 5vh;
}

#subscribeForm{
    margin-bottom:1vh;
    width:80vw;
    margin: 0 10vw 0 10vw;
}

#subscribeForm label{
    width: 200px;
}

.subscribers{
    width: 80vw;
    margin: 0 10vw 0 10vw;
    z-index:1;
}

.subscribers table{
    background-color: rgba(200,200,200,0.7);
}

.subscribers td{
    border-bottom: 2px solid lightblue;
}
.subscribers tr,td{
    margin:0;
    padding:0;
}

.subscribers tr:nth-child(even){
    background-color: rgba(100,100,100,0.7);
}
.subscribers tr:nth-child(odd){
    background-color: rgba(255,255,255,0.7);
}

.subscribers table{
    width: 80vw;
}

#closeMedia{
    position: absolute;
    width: 26vw;
    left: 38vw;
    bottom: 1vh;
}

#formSubmitButton{
    position: relative;
    margin: 3px;
    left:50%;

}

